Local file storage in both server and client, game upload finished